--- a/E tutorial/styles.css
+++ b/E tutorial/styles.css
@@ -21,6 +21,20 @@ li {
     list-style-type: none;
 }
 
+.flex {
+    display: flex;
+}
+
+.flex-1 {
+    flex: 1;
+}
+
+.row {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
 /* NAVIGATION BAR */
 
 nav {
@@ -63,3 +77,34 @@ nav {
     font-weight: bold;
 }
 
+/* ABOUT ME */
+
+#about-me {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me__info--container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-me__picture--mask {
+    width: 100px;
+    height: 115px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
+}
+
+.about-me__picture {
+    width: 100%;
+
+    /* improving my own picture */
+    transform: scale(1.5);
+    padding-top: 8px;
+
+}
