--- a/E tutorial/styles.css
+++ b/E tutorial/styles.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6, span {
     line-height: 1.25;
 }
 
+h1 {
+    font-size: 36px;
+}
+
 p { 
     line-height: 1.5;
     font-size: 16px;
@@ -29,10 +33,26 @@ li {
     flex: 1;
 }
 
+.container {
+    padding: 50px 0;
+}
+
 .row {
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+}
+
+.text--green {
+    color: #22BD6D;
+}
+
+section:nth-child(even) {
+    background-color: #f8f8f8;
+}
+
+.section__title {
+    margin-bottom: 20px;
 }
 
 /* NAVIGATION BAR */
@@ -85,19 +105,27 @@ nav {
     flex-direction: column;
 }
 
+.about-me__info {
+    display: flex;
+    flex-direction: column;
+}
+
 .about-me__info--container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    max-width: 500px;
+    margin: 0 auto;
+    text-align: center;   
 }
 
 .about-me__picture--mask {
-    width: 100px;
+    width: 95px;
     height: 115px;
     border-radius: 50%;
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
+    margin-bottom: 28px;
 }
 
 .about-me__picture {
@@ -106,5 +134,52 @@ nav {
     /* improving my own picture */
     transform: scale(1.5);
     padding-top: 8px;
+}
 
+.about-me__info--title {
+    margin-bottom: 16px;
+}
+
+.about-me__info--para {
+    font-size: 20px;
+    margin-bottom: 28px;
+}
+
+.about-me__link {
+    font-size: 20px;
+    color: #242424;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.about-me__img--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.about-me__img {
+    width: 100%;
+}
+
+/* TECH STACK at 30 mins in 3.1 video*/
+
+.language__img {
+    width: 100%;
+    max-width: 100%;
+}
+
+.language {
+    width: 25%;
+}
+
+.language__img--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.language__list {
+    display: flex;
+    width: 100%;   
 }
