--- a/E tutorial/styles.css
+++ b/E tutorial/styles.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6, span {
     color: #242424;
     text-align: center;
@@ -19,6 +23,10 @@ h1 {
 p { 
     line-height: 1.5;
     font-size: 16px;
+}
+
+a {
+    text-decoration: none;
 }
 
 li {
@@ -74,7 +82,6 @@ nav {
 .nav__link--anchor {
     margin: 0 12px;
     color: #242424;
-    text-decoration: none;
     font-weight: 700;
 }
 
@@ -211,6 +218,14 @@ nav {
 
 /* PROJECTS AT 40:30 MINS - CONTINUE, NEED TO ADD OWN IMG OF PROJECTS IN HTML SECTION*/
 
+.project {
+    margin-bottom: 100px;
+}
+
+.project:last-child {
+    margin-bottom: 40px;
+}
+
 .project__img {
     width: 100%;
     transition: all 500ms ease;
@@ -287,3 +302,57 @@ nav {
     text-align: left;
     color: #fff;
 }
+
+/* FOOTER */
+
+footer {
+    background-color: #242424;
+}
+
+.footer__social--list {
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 28px;
+}
+
+.footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8% 0;
+}
+
+.footer__logo--img {
+    width: 70px;
+    height: 70px;
+}
+
+.footer__logo--popper,
+.footer__social--link,
+.footer__copyright {
+    color: #fff;
+}
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+    transform: translateX(60px);
+    opacity: 1;
+}
+
+
