--- a/E tutorial/styles.css
+++ b/E tutorial/styles.css
@@ -34,14 +34,24 @@ a {
     content: "";
     position: absolute;
     height: 3px;
-    background-color: black;
     width: 0;
     bottom: -3px;
-    left: 0;
+    right: 0;
+    transition: all 300ms ease;
 }
+
+.link__hover-effect--white:after {
+    background-color: #fff;
+}
+
+.link__hover-effect--black:after{
+    background-color: #000;
+}
+
 
 .link__hover-effect:hover:after {
     width: 100%;
+    left: 0;
 }
 
 li {
@@ -88,6 +98,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 12px;
 }
 
 .nav__link--list {
@@ -370,4 +381,17 @@ footer {
     opacity: 1;
 }
 
+/* Small phones, tablets, large smartphones */
+@media (max-width: 768px) {
+    nav {
+        height: 68px;
+    }
 
+    h1 {
+        font-size: 28px;
+    }
+
+    .about-me__info--para {
+        font-size: 18px;
+    }
+}
